# populate-mypy-pre-commit

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
populate_mypy_pre_commit/: main.py
